[project]
name = "uniplot"
version = "0.19.0"
description = "Lightweight plotting to the terminal. 4x resolution via Unicode."
authors = [{name = "Olav Stetter", email = "olav.stetter@googlemail.com"}]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy >=1.22.0"
]

[project.urls]
Homepage = "https://github.com/olavolav/uniplot"
Repository = "https://github.com/olavolav/uniplot"
Issues = "https://github.com/olavolav/uniplot/issues"

[dependency-groups]
dev = [
    "pytest >=6.0.1",
    "mypy ==1.14.1",
    "pandas >=2.0.3",
    "polars >=0.20.5",
    "ruff >=0.9.0"
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["uniplot*"]
